--- a/UX Affectiva Research Tool/UX Affectiva Research Tool.csproj
+++ b/UX Affectiva Research Tool/UX Affectiva Research Tool.csproj
@@ -139,7 +139,7 @@
     <Compile Include="MainWindow.Designer.cs">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </Compile>
-    <Compile Include="NewVideoRecorder.cs" />
+    <Compile Include="Recorder.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BaseClasses\RecordingToolBase.cs" />
