--- a/UX Affectiva Research Tool/packages.config
+++ b/UX Affectiva Research Tool/packages.config
@@ -1,7 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CsvHelper" version="2.13.5.0" targetFramework="net452" />
+  <package id="DocumentFormat.OpenXml" version="2.5" targetFramework="net452" />
+  <package id="EntityFramework" version="6.0.0" targetFramework="net452" />
+  <package id="ExcelLibrary" version="1.2011.7.31" targetFramework="net452" />
+  <package id="Independentsoft.Office" version="2.0.400" targetFramework="net452" />
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net452" />
   <package id="NAudio" version="1.7.3" targetFramework="net452" />
   <package id="SharpAvi" version="2.1.0" targetFramework="net452" />
+  <package id="System.Data.SQLite" version="1.0.99.0" targetFramework="net452" />
+  <package id="System.Data.SQLite.Core" version="1.0.99.0" targetFramework="net452" />
+  <package id="System.Data.SQLite.EF6" version="1.0.99.0" targetFramework="net452" />
+  <package id="System.Data.SQLite.Linq" version="1.0.99.0" targetFramework="net452" />
+  <package id="TopSoft.ExcelExport" version="1.2.3" targetFramework="net452" />
   <package id="Vlc.DotNet.Core" version="2.1.122" targetFramework="net452" />
   <package id="Vlc.DotNet.Core.Interops" version="2.1.122" targetFramework="net452" />
   <package id="Vlc.DotNet.Forms" version="2.1.122" targetFramework="net452" />
