Conversion for Working Changes

--- a/UX Affectiva Research Tool/UX Affectiva Research Tool.csproj
+++ b/UX Affectiva Research Tool/UX Affectiva Research Tool.csproj
@@ -180,6 +180,7 @@
     <Compile Include="CameraFeedPlaybackWindow.Designer.cs">
       <DependentUpon>CameraFeedPlaybackWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="Recorder.cs" />
     <Compile Include="TesterDB.cs" />
     <Compile Include="MainWindow.cs">
       <SubType>Form</SubType>
